--- a/net-tools/Dockerfile
+++ b/net-tools/Dockerfile
@@ -2,5 +2,5 @@ FROM nginx:stable-alpine
 
 RUN apk update \
         && apk upgrade \
-        && apk add --no-cache openssl openssh curl wget bind-tools iputils busybox-extras nmap && \
+        && apk add --no-cache openssl openssh curl wget bind-tools iputils busybox-extras nmap sftp && \
         rm -rf /var/cache/apk/*
