Generate unique ssh keys

--- a/sftp/Dockerfile
+++ b/sftp/Dockerfile
@@ -3,12 +3,12 @@ FROM debian:10-slim
 ARG SSH_MASTER_USER=master
 ARG SSH_MASTER_PASS=master
  
-RUN apt-get update \
- && apt-get install -y --no-install-recommends \
-    nano \
-    sudo \
-    openssh-server
- 
+RUN apt-get update && \
+    apt-get -y install openssh-server && \
+    rm -rf /var/lib/apt/lists/* && \
+    mkdir -p /var/run/sshd && \
+    rm -f /etc/ssh/ssh_host_*key*
+
 COPY ssh_config /etc/ssh/ssh_config
 COPY sshd_config /etc/ssh/sshd_config
  
@@ -16,7 +16,7 @@ COPY user.sh /usr/local/bin/user.sh
 RUN chmod +x /usr/local/bin/user.sh
 RUN /usr/local/bin/user.sh
 RUN rm /usr/local/bin/user.sh
- 
+
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 RUN chmod +x /usr/local/bin/entrypoint.sh
  
