--- a/awscli/Dockerfile
+++ b/awscli/Dockerfile
@@ -1,6 +1,10 @@
 FROM amazon/aws-cli
 
-RUN yum insatll \
-        && apk upgrade \
-        && apk add --no-cache openssl openssh curl wget bind-tools iputils busybox-extras nmap sftp && \
-        rm -rf /var/cache/apk/*
+RUN yum update -y && \
+    yum install -y zip && \
+    yum install -y cifs-utils && \ 
+    yum install -y nfs-utils nfs4-acl-tools && \
+    yum install -y tar && \
+    yum clean all
+
+ENTRYPOINT [] 
