--- a/awscli/Dockerfile
+++ b/awscli/Dockerfile
@@ -1,10 +1,12 @@
 FROM amazon/aws-cli
 
-RUN yum update -y && \
-    yum install -y zip && \
-    yum install -y cifs-utils && \ 
-    yum install -y nfs-utils nfs4-acl-tools && \
-    yum install -y tar && \
-    yum clean all
+RUN yum update -y \
+  && yum install -y \
+  zip \
+  cifs-utils \
+  nfs-utils \
+  nfs4-acl-tools \
+  tar \
+  && yum clean all
 
-ENTRYPOINT [] 
+ENTRYPOINT []
