--- a/awscli/Dockerfile
+++ b/awscli/Dockerfile
@@ -2,10 +2,12 @@ FROM amazon/aws-cli
 
 RUN yum update -y \
   && yum install -y \
-  zip \
+  samba-client \
+  samba-common \
   cifs-utils \
   nfs-utils \
   nfs4-acl-tools \
+  zip \
   tar \
   && yum clean all
 
